--- a/runtime/index.html
+++ b/runtime/index.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <!--<link rel="manifest" href="manifest.json" />-->
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <!-- Sidebar -->
@@ -115,6 +115,6 @@
   </body>
   <script defer src="assets/js/script.js"></script>
   <script defer>
-    //navigator.serviceWorker.register("/assets/js/sw.js");
+    navigator.serviceWorker.register("/assets/js/sw.js");
   </script>
 </html>
