--- a/runtime/index.html
+++ b/runtime/index.html
@@ -1,120 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muse | Music Server</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="manifest" href="/manifest.json" />
-  </head>
-  <body>
-    <!-- Sidebar -->
-    <aside class="sidebar" role="navigation" aria-label="Main Navigation">
-      <div class="header">
-        <h1 class="logo">Muse</h1>
-        <button
-          class="hamburger"
-          onclick="toggleSidebar()"
-          aria-label="Toggle Sidebar"
-        >
-          ☰
-        </button>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <!--onclick="setIFrameTo('home')"-->
-            <a href="#" class="home" style="text-decoration: line-through red wavy;" aria-label="Home"
-              ><i class="fa-solid fa-house"></i> Home</a
-            >
-          </li>
-          <li>
-            <a href="#" class="songs" onclick="setIFrameTo('songs')" aria-label="Songs"
-              ><i class="fa-solid fa-music"></i> Songs</a
-            >
-          </li>
-          <li>
-            <!--onclick="setIFrameTo('albums')"-->
-            <a href="#" class="albums" style="text-decoration: line-through red wavy;" aria-label="Albums"
-              ><i class="fa-solid fa-compact-disc"></i> Albums</a
-            >
-          </li>
-          <li>
-            <!--onclick="setIFrameTo('playlists')"-->
-            <a href="#" class="playlists" style="text-decoration: line-through red wavy;" aria-label="Playlists"
-              ><i class="fa-solid fa-list-check"></i> Playlists</a
-            >
-          </li>
-          <li>
-            <!--"-->
-            <a href="#" class="artists" onclick="setIFrameTo('artists')" aria-label="Artists"
-              ><i class="fa-solid fa-microphone"></i> Artists</a
-            >
-          </li>
-          <li>
-            <!--onclick="setIFrameTo('genres')"-->
-            <a href="#" class="genres" style="text-decoration: line-through red wavy;" aria-label="Genres"
-              ><i class="fa-solid fa-guitar"></i> Genres</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </aside>
-    <!-- Main Content -->
-    <main>
-      <header>
-        <input
-          type="text"
-          placeholder="Search music..."
-          aria-label="Search music"
-        />
-        <div class="profile">
-          <img src="assets/images/place_holder.webp" alt="Profile Picture" />
-        </div>
-      </header>
-      <iframe id="content" src="pages/home.html" title="Content Frame" sandbox="allow-scripts allow-same-origin"></iframe>
-    </main>
-    <!-- Bottom Music Player -->
-    <div class="bottom-player" role="region" aria-label="Music Player">
-      <div class="player-info">
-        <img
-          src="assets/images/place_holder.webp"
-          alt="Song Cover"
-          class="player-thumbnail"
-        />
-        <div class="player-text">
-          <h4 class="player-title">Song Name</h4>
-          <p class="player-artist">Artist Name</p>
-        </div>
-      </div>
-      <div class="player-controls">
-        <button id="prev-btn" aria-label="Previous Song">⏮</button>
-        <button id="play-pause-btn" aria-label="Play/Pause">▶</button>
-        <button id="next-btn" aria-label="Next Song">⏭</button>
-      </div>
-      <div class="player-timeline">
-        <input
-          type="range"
-          id="seek-bar"
-          min="0"
-          max="100"
-          value="0"
-          aria-label="Seek Bar"
-        />
-        <span id="current-time">0:00</span>
-        <span>/</span>
-        <span id="total-duration">0:00</span>
-      </div>
-      <audio id="audio-player" src="#"></audio>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=6.0">
+  <title>Muse | Music Server</title>
+  <meta name="description" content="Personal music streaming server with your favorite songs">
+  <meta name="keywords" content="music, streaming, audio player, personal music server">
+  <meta name="author" content="Muse">
+  <meta name="theme-color" content="#b91d1d">
+
+  <!-- Security Headers -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdnjs.cloudflare.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; script-src 'self' 'unsafe-inline';">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://your-domain.com/">
+  <meta property="og:title" content="Muse | Music Server">
+  <meta property="og:description" content="Personal music streaming server with your favorite songs">
+  <meta property="og:image" content="assets/images/og-image.png">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Muse | Music Server">
+  <meta name="twitter:description" content="Personal music streaming server with your favorite songs">
+  <meta name="twitter:image" content="assets/images/og-image.png">
+
+  <!-- Mobile Meta -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Favicons -->
+  <link rel="icon" href="assets/images/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/ios/1024.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/desktop/Square44x44Logo.targetsize-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/desktop/Square44x44Logo.targetsize-16.png">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <!-- Preloads -->
+  <link rel="preload" href="assets/css/style.css" as="style">
+  <link rel="preload" href="assets/js/script.js" as="script">
+</head>
+<body>
+<!-- Sidebar Navigation -->
+<aside class="sidebar" role="region" aria-label="Main navigation">
+  <div class="header">
+    <h1 class="logo">Muse</h1>
+    <button
+            class="hamburger"
+            onclick="toggleSidebar()"
+            aria-label="Toggle navigation menu"
+            aria-controls="sidebar-menu"
+            aria-expanded="false"
+    >
+      ☰
+    </button>
+  </div>
+  <nav id="sidebar-menu">
+    <ul>
+      <li><a href="#" class="home" data-page="home"><i class="fa-solid fa-house"></i> <span>Home</span></a></li>
+      <li><a href="#" class="songs" data-page="songs"><i class="fa-solid fa-music"></i> <span>Songs</span></a></li>
+      <li><a href="#" class="playlists" data-page="playlists"><i class="fa-solid fa-list-check"></i> <span>Playlists</span></a></li>
+      <li><a href="#" class="artists" data-page="artists"><i class="fa-solid fa-microphone"></i> <span>Artists</span></a></li>
+      <li><a href="#" class="genres" data-page="genres"><i class="fa-solid fa-guitar"></i> <span>Genres</span></a></li>
+    </ul>
+  </nav>
+</aside>
+
+<!-- Main Content -->
+<main id="main" role="main" tabindex="-1">
+  <header>
+    <button class="hamburger" onclick="toggleSidebar()" aria-label="Toggle navigation menu" aria-controls="sidebar-menu" aria-expanded="false">
+      ☰
+    </button>
+    <label for="search" class="visually-hidden">Search music</label>
+    <input type="search" id="search" placeholder="Search music..." aria-label="Search music" />
+    <div class="profile">
+      <img src="assets/images/place_holder.webp" alt="User profile picture" />
     </div>
-  </body>
-  <script defer src="assets/js/script.js"></script>
-  <script defer>
-    navigator.serviceWorker.register("/assets/js/sw.js");
-  </script>
+  </header>
+  <div id="content" aria-live="polite"></div>
+</main>
+
+<!-- Bottom Music Player -->
+<div class="bottom-player" role="region" aria-label="Music player">
+  <div class="player-info">
+    <img src="" alt="Current song cover" class="player-thumbnail" id="player-thumbnail-id"/>
+    <div class="player-text">
+      <h2 class="player-title" id="player_title">NONE</h2>
+      <p class="player-artist" id="player_artist" aria-live="polite"></p>
+    </div>
+  </div>
+
+  <div class="player-controls" role="group" aria-label="Playback controls">
+    <button id="prev-btn" aria-label="Previous track">⏮</button>
+    <button id="play-pause-btn" aria-label="Play or pause">▶</button>
+    <button id="next-btn" aria-label="Next track">⏭</button>
+  </div>
+
+  <div class="player-timeline">
+    <label for="seek-bar" class="visually-hidden">Seek position</label>
+    <input
+            type="range"
+            id="seek-bar"
+            min="0"
+            max="100"
+            value="0"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            aria-valuenow="0"
+    />
+    <span id="current-time">0:00</span>
+    <span aria-hidden="true">/</span>
+    <span id="total-duration">0:00</span>
+  </div>
+  <audio id="audio-player" src=""></audio>
+</div>
+
+<script defer src="assets/js/script.js"></script>
+<script defer>
+  //navigator.serviceWorker.register("/assets/js/sw.js");
+</script>
+
+<!-- Accessibility helper -->
+<style>
+
+</style>
+</body>
 </html>
