Implements user authentication and music scan
Adds login and registration features with secure password handling.

Implements music directory scanning and automatic registration of songs to the database, including extraction of metadata from ID3 tags.

Includes Font Awesome for UI icons and enhances code structure.

--- a/statics/index.html
+++ b/statics/index.html
@@ -37,12 +37,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/desktop/Square44x44Logo.targetsize-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/desktop/Square44x44Logo.targetsize-16.png">
 
-  <!-- Preconnect to CDN -->
-  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-
   <!-- Styles -->
+  <link rel="preload" href="/assets/css/font-awesome.all.min.css" as="style">
   <link rel="preload" href="/assets/css/style.css" as="style">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="/assets/css/font-awesome.all.min.css">
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
