--- a/statics/login.html
+++ b/statics/login.html
@@ -37,128 +37,168 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/desktop/Square44x44Logo.targetsize-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/desktop/Square44x44Logo.targetsize-16.png">
 
-    <!-- Preconnect to CDN -->
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-
     <!-- Styles -->
+    <link rel="preload" href="/assets/css/font-awesome.all.min.css" as="style">
     <link rel="preload" href="/assets/css/login_style.css" as="style">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.all.min.css">
     <link rel="stylesheet" href="/assets/css/login_style.css">
 </head>
 <body>
-<main class="login-container" role="main">
-    <section class="login-card" aria-labelledby="login-heading">
-        <header class="login-header">
-            <h1 id="login-heading">Muse</h1>
+<main class="container" role="main">
+    <section class="card" aria-labelledby="heading">
+        <header class="header">
+            <h1 id="heading">Muse</h1>
             <p>Sign in to continue</p>
         </header>
-        <form action="/login/submit" method="post" class="login-form">
+
+        <div class="server-error" id="serverError" role="alert">
+            <p id="serverErrorMessage"></p>
+        </div>
+
+        <form action="/login/submit" method="post" class="form">
             <div class="form-group">
                 <label for="username" class="visually-hidden">Username</label>
                 <i class="fa-solid fa-user" aria-hidden="true"></i>
-                <input type="text" id="username" name="username" placeholder="Username" required />
+                <input type="text" id="username" name="username" placeholder="Username" required
+                       minlength="3" maxlength="20" pattern="^[a-zA-Z0-9_]+$" />
+                <div class="error-message" aria-live="polite"></div>
             </div>
             <div class="form-group">
                 <label for="password" class="visually-hidden">Password</label>
                 <i class="fa-solid fa-lock" aria-hidden="true"></i>
-                <input type="password" id="password" name="password" placeholder="Password" required />
+                <input type="password" id="password" name="password" placeholder="Password" required
+                       minlength="8" maxlength="32" />
+                <div class="error-message" aria-live="polite"></div>
             </div>
-            <button type="submit" class="login-button">Sign In</button>
+            <button type="submit" class="button">Sign In</button>
         </form>
-        <div class="register-link">
+        <div class="link">
             Don't have an account? <a href="/register">Register</a>
         </div>
     </section>
 </main>
+<script src="/assets/js/login_script.js"></script>
 <script>
-    const form = document.querySelector('.login-form');
-    const inputs = form.querySelectorAll('input');
-    const submitButton = form.querySelector('.login-button');
+    // Validation rules
+    const validationRules = {
+        username: {
+            required: true,
+            minLength: 3,
+            maxLength: 20,
+            pattern: /^[a-zA-Z0-9_]+$/,
+            message: 'Username must be 3-20 characters, contain only letters, numbers, and underscores. No profanity allowed.'
+        },
+        password: {
+            required: true,
+            minLength: 8,
+            maxLength: 32,
+            pattern: /^(?=.*\d)(?=.*[!@#$%^&*])/,
+            message: 'Password must be 8-32 characters with at least one number and one special character (!@#$%^&*)'
+        },
+    };
 
-    const serverErrorDiv = document.createElement('div');
-    serverErrorDiv.id = 'serverError';
-    serverErrorDiv.className = 'server-error';
-    serverErrorDiv.setAttribute('role', 'alert');
-    const serverErrorMessage = document.createElement('p');
-    serverErrorMessage.id = 'serverErrorMessage';
-    serverErrorDiv.appendChild(serverErrorMessage);
-    form.insertAdjacentElement('beforebegin', serverErrorDiv);
 
-    function showError(input, message) {
-        const group = input.closest('.form-group');
-        group.classList.add('error');
-        group.classList.remove('valid');
+    function validateField(input, showValidState = false) {
+        const name = input.name;
+        const value = input.value.trim();
+        const rules = validationRules[name];
 
-        let errorElement = group.querySelector('.error-message');
-        if (!errorElement) {
-            errorElement = document.createElement('span');
-            errorElement.className = 'error-message';
-            errorElement.setAttribute('aria-live', 'assertive');
-            group.appendChild(errorElement);
+        if (!rules) return true;
+
+        // Don't validate empty fields unless they're being submitted
+        if (!value && !input.dataset.validateEmpty) {
+            clearValidation(input);
+            return false;
         }
 
-        errorElement.textContent = message;
-        input.setAttribute('aria-invalid', 'true');
-        setTimeout(() => {
-            errorElement.setAttribute('aria-live', 'polite');
-        }, 1000);
-    }
+        // Required validation
+        if (rules.required && !value) {
+            showError(input, `${input.placeholder} is required`);
+            return false;
+        }
 
-    function clearError(input) {
-        const group = input.closest('.form-group');
-        group.classList.remove('error');
-        group.classList.remove('valid');
-        input.setAttribute('aria-invalid', 'false');
-        const errorElement = group.querySelector('.error-message');
-        if (errorElement) errorElement.textContent = '';
-    }
+        // Skip further validation if empty
+        if (!value) {
+            clearValidation(input);
+            return false;
+        }
 
-    function showServerError(message) {
-        serverErrorMessage.textContent = message;
-        serverErrorDiv.classList.add('show');
-        serverErrorDiv.scrollIntoView({ behavior: 'smooth', block: 'center' });
-    }
+        // Length validation
+        if (rules.minLength && value.length < rules.minLength) {
+            showError(input, rules.message);
+            return false;
+        }
 
-    function hideServerError() {
-        serverErrorDiv.classList.remove('show');
-        serverErrorMessage.textContent = '';
+        if (rules.maxLength && value.length > rules.maxLength) {
+            showError(input, rules.message);
+            return false;
+        }
+
+        // Pattern validation
+        if (rules.pattern && !rules.pattern.test(value)) {
+            showError(input, rules.message);
+            return false;
+        }
+
+        // Show success state if requested
+        if (showValidState) {
+            showSuccess(input);
+        } else {
+            clearValidation(input);
+        }
+
+        return true;
     }
 
     function setLoadingState(loading) {
         if (loading) {
             submitButton.classList.add('loading');
             submitButton.disabled = true;
+            submitButton.textContent = 'Logging in...';
         } else {
             submitButton.classList.remove('loading');
             submitButton.disabled = false;
+            submitButton.textContent = 'Log In';
         }
     }
 
-    function validateInput(input) {
-        if (!input.checkValidity()) {
-            showError(input, input.validationMessage);
-            return false;
-        }
-        clearError(input);
-        return true;
-    }
-
+    // Event listeners
     inputs.forEach(input => {
+        // Clear errors and hide server error when user starts typing
         input.addEventListener('input', () => {
-            clearError(input);
             hideServerError();
-            if (input.value) validateInput(input);
+
+            // Clear validation immediately when user starts typing
+            if (!input.dataset.hasBlurred) {
+                clearValidation(input);
+            } else {
+                // Validate in real-time after first blur, but only show success state if valid
+                const isValid = validateField(input, false);
+                if (isValid && input.value.trim().length > 0) {
+                    showSuccess(input);
+                }
+            }
         });
 
+        // Only validate on blur if the field has content
         input.addEventListener('blur', () => {
-            if (input.value) validateInput(input);
+            // Only validate on blur if the field has content
+            if (input.value.trim()) {
+                input.dataset.validateEmpty = 'true';
+                validateField(input, true);
+            }
+
+            // Track if field has been blurred
+            input.dataset.hasBlurred = 'true';
         });
 
+        // Clear server errors on focus
         input.addEventListener('focus', () => {
-            input.setAttribute('aria-invalid', 'false');
+            hideServerError();
         });
     });
 
+    // Form submission
     form.addEventListener('submit', async (e) => {
         e.preventDefault();
         hideServerError();
@@ -166,17 +206,25 @@
         let hasErrors = false;
         let firstError = null;
 
+        // Mark all fields for validation
         inputs.forEach(input => {
-            const valid = validateInput(input);
-            if (!valid) {
+            input.dataset.validateEmpty = 'true';
+        });
+
+        // Validate all fields
+        inputs.forEach(input => {
+            const isValid = validateField(input, false);
+            if (!isValid) {
                 hasErrors = true;
                 if (!firstError) firstError = input;
+            } else {
+                showSuccess(input);
             }
         });
 
         if (hasErrors) {
-            firstError.focus();
-            firstError.scrollIntoView({ behavior: 'smooth', block: 'center' });
+            firstError?.focus();
+            firstError?.scrollIntoView({ behavior: 'smooth', block: 'center' });
             return;
         }
 
@@ -192,25 +240,32 @@
                 },
                 body: new URLSearchParams(formData)
             });
-            console.log('Login response:', response);
+
             const result = await response.json();
 
             if (response.ok && result.success) {
-                window.location.href = result.redirect || '/dashboard';
+                // Success - redirect or show success message
+                window.location.href = result.redirect || '/login?registered=true';
             } else {
+                // Handle field-specific errors
                 if (result.errors) {
-                    if (result.errors.username) showError(document.getElementById('username'), result.errors.username);
-                    if (result.errors.password) showError(document.getElementById('password'), result.errors.password);
+                    Object.keys(result.errors).forEach(fieldName => {
+                        const input = document.getElementById(fieldName);
+                        if (input) {
+                            showError(input, result.errors[fieldName]);
+                        }
+                    });
                 }
 
+                // Handle general error message
                 if (result.message) {
                     showServerError(result.message);
                 } else if (!result.errors) {
-                    showServerError('Login failed. Please check your credentials.');
+                    showServerError('Registration failed. Please try again.');
                 }
             }
         } catch (err) {
-            console.error('Login error:', err);
+            console.error('Registration error:', err);
             showServerError('Unable to connect. Please check your network and try again.');
         } finally {
             setLoadingState(false);
