--- a/statics/index.html
+++ b/statics/index.html
@@ -11,7 +11,6 @@
 
   <!-- Security Headers -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdnjs.cloudflare.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; script-src 'self' 'unsafe-inline';">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -40,8 +39,11 @@
   <!-- Styles -->
   <link rel="preload" href="/assets/css/font-awesome.all.min.css" as="style">
   <link rel="preload" href="/assets/css/style.css" as="style">
+  <link rel="preload" href="/assets/css/sweetalert2.css" as="style">
   <link rel="stylesheet" href="/assets/css/font-awesome.all.min.css">
   <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/sweetalert2.css">
+
 </head>
 <body>
 <!-- Sidebar Navigation -->
@@ -86,7 +88,7 @@
 <!-- Bottom Music Player -->
 <div class="bottom-player" role="region" aria-label="Music player">
   <div class="player-info">
-    <img src="" alt="Current song cover" class="player-thumbnail" id="player-thumbnail-id" loading="lazy"/>
+    <img src='/assets/images/place_holder.webp' alt="Current song cover" class="player-thumbnail" id="player-thumbnail-id" loading="lazy"/>
     <div class="player-text">
       <h2 class="player-title" id="player-title-id">NONE</h2>
       <p class="player-artist" id="player-artist-id" aria-live="polite"></p>
@@ -119,7 +121,8 @@
 </div>
 
 <!-- Scripts -->
-<script src="/assets/js/script.js"></script>
+<script src="/assets/js/sweetalert2.all.min.js"></script>
+<script type="module" src="/assets/js/script.js"></script>
 <script defer>
   //navigator.serviceWorker.register("/assets/js/sw.js");
 </script>
