--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -11,10 +11,11 @@
 
   <!-- Security Headers -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; media-src 'self' blob:; font-src 'self' data:; connect-src 'self' file: http://*:8000 https://*:8000;">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://pheonixfirewingz.github.io/">
+  <meta property="og:url" content="https://pheonixfirewingz.github.io/muse">
   <meta property="og:title" content="Muse | Music Server">
   <meta property="og:description" content="Personal music streaming server with your favorite songs">
   <meta property="og:image" content="assets/images/og-image.png">
